# shadowing_python_demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
customer/: models.py  urls.py  views.py
customer/domain/: customer.py
customer/infra/: customer_event_service.py  customer_repository.py
customer/migrations/: 0001_initial.py  0002_alter_customer_email.py
customer/service_layer/: customer.py
customer/templates/customer/: signup.html  thanks.html
customer/test/: test_customer_repository.py  test_customer_service.py
frontend/: .gitignore  main.css  package-lock.json  package.json  tailwind.config.js
newsletter/: settings.py  urls.py  views.py
newsletter/templates/newsletter/: articles.html  base.html  index.html
newsletter/templates/newsletter/base_includes/: _navbar.html
