[tool.poetry]
name = "shadowing_python_demo"
version = "0.1.0"
description = ""
authors = ["Michael Kilian <michael.kilian@lendable.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.1"
django-stubs = "4.2.7"
dj-database-url = "2.1.0"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
pydantic = "^2.5.3"
email-validator = "^2.1.0.post1"
boto3 = "^1.34.18"
django-compressor = "^4.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.7"
pytest = "^7.3"
ruff = "^0.1.11"
pre-commit = "^3.6.0"
ipython = "^8.20.0"
boto3-stubs = "^1.34.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
# Line length handled by black and this prevents really long imports flagging
ignore = [ "E501" ]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
